<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    tools:context="com.dev.lakik.landlordmg.Fragments.Main.CreateOrEditPropertyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="80dp">

        <LinearLayout
            android:id="@+id/llBasicInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="16dp">

            <com.dev.lakik.landlordmg.CustomView.DividerWithTitle
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                custom:titleText="@string/basic_info">

            </com.dev.lakik.landlordmg.CustomView.DividerWithTitle>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etStartDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:hint="@string/start_date"
                        android:imeActionId="6"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="16sp"
                        android:focusableInTouchMode="false"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etEndDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:hint="@string/end_date"
                        android:imeActionId="6"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="16sp"
                        android:focusableInTouchMode="false"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etRentCost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/rent_cost"
                    android:imeActionId="6"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="16sp"
                    />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etNextPayday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:hint="@string/first_payday"
                        android:imeActionId="6"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="16sp"
                        android:focusableInTouchMode="false"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusable="true"
                    android:focusableInTouchMode="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etPeriod"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:hint="@string/period"
                        android:imeActionId="6"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="16sp"
                        />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llOneTimeCharge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp">

            <com.dev.lakik.landlordmg.CustomView.DividerWithTitle
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                custom:titleText="@string/one_time_charge">


            </com.dev.lakik.landlordmg.CustomView.DividerWithTitle>

            <ListView
                android:id="@+id/lvOnetimeCharges"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="beforeDescendants"
                android:divider="@android:color/transparent"
                android:footerDividersEnabled="false"
                android:headerDividersEnabled="false" />

            <TextView
                android:id="@+id/tvAddOnetimeCharge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/add_onetime_charge" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSecureDeposit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="16dp">

            <com.dev.lakik.landlordmg.CustomView.DividerWithTitle
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                custom:titleText="@string/secure_deposit">

            </com.dev.lakik.landlordmg.CustomView.DividerWithTitle>

            <com.dev.lakik.landlordmg.CustomView.ScrollDisabledListView
                android:id="@+id/lvSecuretyDeposit"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:descendantFocusability="beforeDescendants"/>

            <TextView
                android:id="@+id/tvAddSecuretyDeposit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/add_securety_deposit" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>

